--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,31 @@
-@@ -2,14 +2,8 @@
-   "version": 2,
-   "buildCommand": "npm run build",
-   "installCommand": "npm install",
-   "framework": "nextjs",
--  "builds": [
--    {
--      "src": "package.json",
--      "use": "@vercel/next"
--    }
--  ],
-   "env": {
-     "MONGODB_URI": "mongodb+srv://xaayux:909090xd@cluster0.mojpz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
-     "MONGODB_DB": "gumasta_krishi_kendra"
-   },
+{
+  "version": 2,
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "framework": "nextjs",
+  "env": {
+    "MONGODB_URI": "mongodb+srv://xaayux:909090xd@cluster0.mojpz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+    "MONGODB_DB": "gumasta_krishi_kendra"
+  },
+  "regions": ["bom1"],
+  "functions": {
+    "pages/api/**/*.js": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  },
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ]
+}
