--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://xaayux:909090xd@cluster0.mojpz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 MONGODB_DB=gumasta_krishi_kendra
+MONGODB_URI=mongodb+srv://aayu:<909090gg>@aayu.vgpfl.mongodb.net/?retryWrites=true&w=majority&appName=aayu
