--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://aayu:<909090gg>@aayu.vgpfl.mongodb.net/?retryWrites=true&w=majority&appName=aayu
+MONGODB_URI=mongodb+srv://aayu:909090gg@aayu.vgpfl.mongodb.net/?retryWrites=true&w=majority&appName=aayu
