--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,1 @@
-MONGODB_URI=mongodb+srv://aayu:909090gg@aayu.vgpfl.mongodb.net/gumasta_krishi_kendra?retryWrites=true&w=majority&appName=aayu
-MONDODB_DB=aaayu
+MONGODB_URI=mongodb+srv://aayu:909090gg@aayu.vgpfl.mongodb.net/?retryWrites=true&w=majority&appName=aayu
